# Scorpion

./: .gitignore  .project  AboutWidget.cpp  AboutWidget.ui  BusinessLogic.cpp  BusinessLogic.h  CMakeLists.txt  Document.cpp  Document.h  Hello  MainMenu.cpp  MainMenu.h  README.md  StatusBar.cpp  StatusBar.h  ViewDokuments.cpp  ViewDokuments.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolbar.cpp  toolbar.h
About/: Team.txt
Scorpion/: CMakeLists.txt  main.cpp
project/: main.cpp  resourses.qrc
project/about/: Team.txt
project/forms/: ParametersWidget.ui
project/gui/: AboutWidget.cpp  AboutWidget.h  MainMenu.cpp  MainMenu.h  ParametersWidget.cpp  ParametersWidget.h  ViewDokuments.cpp  ViewDokuments.h  mainwindow.cpp  mainwindow.h  toolbar.cpp  toolbar.h
project/images/Styles/: Fibers.qss
project/logic/: BusinessLogic.cpp  BusinessLogic.h  Document.cpp  Document.h
src/gui/: AboutWidget.cpp  ViewDokuments.h
test/: .gitignore  UnitTests.pro  main.cpp  test_document.h  test_toolbar.cpp  test_toolbar.h
tests/Document/: Document.h  Unit Тест класса Document.xlsx  main.cpp  test_document.cpp  test_document.h  test_document.pro
tests/ToolBar/: Unit Тест класса ToolBar.xlsx  main.cpp  test_toolbar.cpp  test_toolbar.h  test_toolbar.pro  toolbar.h
